# MicroParalegal

./: Dockerfile  README.md
backend/: pyproject.toml
backend/src/app/: config.py  db.py  documents.py  drafting.py  drafting_chat.py  main.py  nda.py  nda_chat.py  schema.py
backend/tests/: test_app.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: document-workspace.tsx  fake-login.tsx  nda-workspace.tsx  platform-shell.tsx  workspace-gate.tsx
frontend/src/lib/: nda-template.ts
scripts/: start-linux.sh  start-windows.ps1
